k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odh-dashboard
  labels:
    name: odh-dashboard
